Allow exit with 'Q' key shortcut.

--- a/camplayer.service
+++ b/camplayer.service
@@ -8,7 +8,7 @@ Type=simple
 User=pi
 Group=pi
 ExecStart=/usr/local/bin/camplayer
-ExecStopPost=bash /usr/local/share/camplayer/bin/logsaver.sh
+# ExecStopPost=bash /usr/local/share/camplayer/bin/logsaver.sh
 KillMode=control-group
 Restart=on-failure
 RestartSec=30
